Chess Club/src/objects/Person__c.object
<CustomObject>
    <fields>
        <fullName>Age__c</fullName>
        <formula>Year ( TODAY() ) - Year( Date_Of_Birth__c) - IF( Month( Date_Of_Birth__c ) *10 + Day( Date_Of_Birth__c) &gt; Month( TODAY() ) *10 - Day( TODAY() ),0,1)</formula>
        <label>Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contact_Details__c</fullName>
        <label>Contact Details</label>
        <summaryForeignKey>Contact__c.Person_del__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Date_Of_Birth__c</fullName>
        <label>Date of Birth</label>
        <summarizedField>Player__c.DOB__c</summarizedField>
        <summaryForeignKey>Player__c.Person_ID_del__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <externalId>true</externalId>
        <label>First Name</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Full_Name__c</fullName>
        <formula>First_Name__c + &quot; &quot; + Last_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Player_Registrations__c</fullName>
        <label>Player Registrations</label>
        <summaryForeignKey>Player__c.Person_ID_del__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Player__c</fullName>
        <formula>Player_Registrations__c &gt; 0</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Player</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Record_Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Record Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Subscribed__c</fullName>
        <formula>False</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Subscription_Expiry__c &gt; TODAY()</inlineHelpText>
        <label>Subscribed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Supervisor_Registrations__c</fullName>
        <label>Supervisor Registrations</label>
        <summaryForeignKey>Supervisor__c.Person__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Supervisor__c</fullName>
        <formula>Supervisor_Registrations__c &gt; 0</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Supervisor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Underage__c</fullName>
        <formula>AND(NOT(ISBLANK(Date_Of_Birth__c)), Age__c &lt; 18)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Under-Age</label>
        <type>Checkbox</type>
    </fields>
    <label>Person</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Full_Name__c</columns>
        <columns>NAME</columns>
        <columns>Player__c</columns>
        <columns>Supervisor__c</columns>
        <columns>Subscribed__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PN-{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>People</pluralLabel>
    <recordTypes>
        <fullName>Person</fullName>
        <active>true</active>
        <description>Name &amp; Contact Details</description>
        <label>Person</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Multiple_Player_Registrations</fullName>
        <active>true</active>
        <errorConditionFormula>Player_Registrations__c &gt; 1</errorConditionFormula>
        <errorMessage>This person is already registered as a player</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Multiple_Supervisor_Registrations</fullName>
        <active>true</active>
        <errorConditionFormula>Supervisor_Registrations__c &gt; 1</errorConditionFormula>
        <errorMessage>This person is already registered as a supervisor</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Underage_Contacts</fullName>
        <active>true</active>
        <errorConditionFormula>AND ( Underage__c , Contact_Details__c &gt; 0)</errorConditionFormula>
        <errorMessage>Under-age player should not  have contact details</errorMessage>
    </validationRules>
</CustomObject>